[workspace]
members            = ["cosmos-grpc-client", "mock_test"]

[workspace.dependencies]
cosmrs             = {version = "0.14.0"}
cosmos-sdk-proto   = {version = "0.19.0", features = ["cosmwasm"]}

bip32              = "0.5.1"
bip39              = "2.0.0"
hdpath             = "0.6.3"

cosmwasm-std       = "1.3.2"
cosmwasm-schema    = "1.1.0"

tokio              = {version = "1", features = ["full"]}
tonic              = "0.9.2"

serde              = "1.0.185"
serde_json         = "1.0.105"
enum-repr          = "0.2.6"

osmosis-std        = "0.16.2"
injective-protobuf = "0.2.0"

protobuf           = "2.28.0"



