[workspace]
members            = ["cosmos-grpc-client"]

[workspace.dependencies]
cosmrs             = {version = "0.16.0"}
cosmos-sdk-proto   = {version = "0.21.1", features = ["cosmwasm"]}

bip32              = "0.5.1"
bip39              = "2.0.0"
hdpath             = "0.6.3"

cosmwasm-std       = "1.3.2"
cosmwasm-schema    = "1.1.0"

tokio              = {version = "1", features = ["full"]}
tonic              = "0.11.0"

anyhow             = "1.0.81"

serde              = "1.0.185"
serde-json-wasm    = "1.0.1"
prost              = "0.12.3"
prost-types        = "0.12.3"

enum-repr          = "0.2.6"

osmosis-std        = "0.24.0"
osmosis-std-derive = "0.20.1"

injective-protobuf = "0.2.2"
protobuf           = "3.4.0"



