[workspace]
members            = ["cosmos-grpc-client", "mock_test"]

[workspace.dependencies]
anyhow             = "1.0.81"
bip32              = "0.5.1"
bip39              = "2.0.0"
cosmos-sdk-proto   = {version = "0.21.1", features = ["cosmwasm"]}
cosmrs             = "0.16.0"
cosmwasm-schema    = "1.1.0"
cosmwasm-std       = "1.3.2"
enum-repr          = "0.2.6"
injective-protobuf = "=0.2.2"
osmosis-std        = "0.24.0"
osmosis-std-derive = "0.20.1"
prost              = "0.12.3"
prost-types        = "0.12.3"
protobuf           = "2.28.0"
serde              = "1.0.185"
serde-json-wasm    = "1.0.1"
sha3               = "0.10.8"
subtle-encoding    = "0.5.1"
tokio              = {version = "1", features = ["full"]}
tonic              = "0.11.0"


