[package]
name               = "cosmos-grpc-client"
version            = "3.0.1"
edition            = "2021"
authors            = ["Rhaki"]
description        = "Cosmos grpc client & wallet abstraction"
license            = "Apache-2.0"
repository         = "https://github.com/Rhaki/cosmos-grpc-client"
readme             = "../README.md"


[features]
osmosis            = ["osmosis-std"]
injective          = []

[dependencies]
anyhow             = {workspace=true}
bip32              = {workspace=true}
bip39              = {workspace=true}
cosmrs             = {workspace=true}
cosmos-sdk-proto   = {workspace=true}
cosmwasm-schema    = {workspace=true}
cosmwasm-std       = {workspace=true}
enum-repr          = {workspace=true}
injective-protobuf = {workspace=true}
osmosis-std        = {workspace=true, optional = true}
prost              = {workspace=true}
prost-types        = {workspace=true}
protobuf           = {workspace=true}
serde              = {workspace=true}
serde-json-wasm    = {workspace=true}
sha3               = {workspace=true}
subtle-encoding    = {workspace=true}
tokio              = {workspace=true}
tonic              = {workspace=true}
